# lidro

./: .env  .env_example  .gitignore  .gitmodules  .netrc  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  branch.py  environment.yml  example_create_mask_default.sh  example_create_virtual_point_by_tile.sh  example_create_virtual_point_default.sh  example_lidro_by_tile.sh  example_lidro_default.sh  example_merge_mask_default.sh  pyproject.toml  requirements.txt  skeleton.py
configs/: config.yaml  configs_lidro.yaml  configs_skeleton.yaml  default.yml
images/: images_edition.pptx  lidro_correction_pont.odp
lidro/: _version.py  create_mask_hydro.py  create_mnt.py  main.py  main_clip_virtual_point_by_tile.py  main_create_mask.py  main_create_skeleton_lines.py  main_create_virtual_point.py  main_extract_points_from_skeleton.py  main_merge_mask.py
scripts/: example_clip_virtual_point_default .sh  example_create_mask_by_tile.sh  example_create_mask_default.sh  example_create_skeleton_lines.sh  example_create_virtual_point_by_tile.sh  example_create_virtual_point_default.sh  example_extract_points_around_skeleton_default.sh  example_merge_mask_default.sh
skeleton/: branch.py  group_maker.py  main_skeleton.py
test/: conftest.py  test_config.py  test_connect_vm.py  test_convert_to_vector.py  test_create_database.py  test_create_inverse_mask.py  test_create_mask.py  test_create_mask_hydro.py  test_create_mask_raster.py  test_create_mnt.py  test_filter_las.py  test_get_pointcloud_origin.py  test_main.py  test_main_clip_virtual_point_by_tile.py  (+5 more)
(+131 files in other folders)
