[project]
name = "lidro"
dynamic = ["version"]

description = "lidro"
readme = "README.md"

authors = [
    { name = "Malvina Dupays", email = "malvina.dupays@ign.fr" },
]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.bat
  | data
)/
'''

[tool.isort]
profile = "black"
