[project]
name = "lidro"
dynamic = ["version"]

description = "lidro"
readme = "README.md"

authors = [{ name = "Malvina Dupays", email = "malvina.dupays@ign.fr" }]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.bat
  | data
)/
'''

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
markers = [
  "returnfile: mark a test that returns a file to visualize results (deselect with '-m \"not returnfile\"')",
  "bduni: mark a test that uses the bduni database (deselect with '-m \"not bduni\"')",
]
